[gd_scene load_steps=9 format=3 uid="uid://0h2upr76rvet"]

[ext_resource type="Script" path="res://Timer/timer_settings.gd" id="1_hhcr8"]
[ext_resource type="Script" path="res://Timer/Settings.gd" id="2_j0lw1"]
[ext_resource type="Script" path="res://Timer/Timer_Display.gd" id="2_joybk"]
[ext_resource type="Script" path="res://Timer/Break_Display.gd" id="3_41xme"]
[ext_resource type="PackedScene" uid="uid://cpnid0qnob4p8" path="res://Timer/Timer Settings/time_slots.tscn" id="4_osudh"]

[sub_resource type="Theme" id="Theme_u8j7e"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_fvxm5"]
size = Vector2(700, 1200)

[sub_resource type="Theme" id="Theme_6jfhn"]
Button/constants/h_separation = 4

[node name="Timer_Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hhcr8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -960.0
offset_right = 540.0
offset_bottom = 960.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_u8j7e")
color = Color(0.333333, 0.333333, 0.333333, 0.501961)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 940.0
offset_right = 528.0
offset_bottom = 948.0

[node name="Settings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -600.0
offset_right = 350.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_j0lw1")

[node name="Background" type="TextureRect" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_fvxm5")

[node name="Timer_Display" type="Control" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 350.0
offset_bottom = 350.0
grow_horizontal = 2
script = ExtResource("2_joybk")

[node name="Timer_Length" type="Label" parent="Settings/Timer_Display"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -55.0
offset_right = 160.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "00:00:00
"

[node name="Add" type="Button" parent="Settings/Timer_Display"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 175.0
offset_top = -59.0
offset_right = 229.0
offset_bottom = 59.0
grow_vertical = 2
theme = SubResource("Theme_6jfhn")
theme_override_font_sizes/font_size = 80
text = "+"

[node name="Subtract" type="Button" parent="Settings/Timer_Display"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -59.0
offset_right = -175.0
offset_bottom = 59.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_6jfhn")
theme_override_font_sizes/font_size = 80
text = "-"

[node name="Hours" parent="Settings/Timer_Display" instance=ExtResource("4_osudh")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -59.0
offset_right = -64.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "01"

[node name="Minutes" parent="Settings/Timer_Display" instance=ExtResource("4_osudh")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -59.0
offset_right = 50.5
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="Seconds" parent="Settings/Timer_Display" instance=ExtResource("4_osudh")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -59.0
offset_right = 165.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="Break_Display" type="Control" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 500.0
offset_bottom = 500.0
grow_horizontal = 2
script = ExtResource("3_41xme")

[node name="Break_Length" type="Label" parent="Settings/Break_Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -55.0
offset_right = 160.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "00:00:00
"

[node name="Add" type="Button" parent="Settings/Break_Display"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 175.0
offset_top = -59.0
offset_right = 229.0
offset_bottom = 59.0
grow_vertical = 2
theme = SubResource("Theme_6jfhn")
theme_override_font_sizes/font_size = 80
text = "+"

[node name="Subtract" type="Button" parent="Settings/Break_Display"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -59.0
offset_right = -175.0
offset_bottom = 59.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_6jfhn")
theme_override_font_sizes/font_size = 80
text = "-"

[node name="Normal" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_bottom = 81.0
grow_horizontal = 2
text = "N"

[node name="Pomodoro" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 50.0
offset_right = 100.0
offset_bottom = 81.0
grow_horizontal = 2
text = "P"

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="pressed" from="Settings/Normal" to="Settings" method="_on_normal_pressed"]
[connection signal="pressed" from="Settings/Pomodoro" to="Settings" method="_on_pomodoro_pressed"]
